Add html elements to sec1
Added all the html elements to the sec1 div.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
             <div class="header">
                 HEADER LOGO
                 <ul>
-                    <li><a href="hlink">header link one</a></li>
-                    <li><a href="hlink">header link two</a></li>
-                    <li><a href="hlink">header link three</a></li>
+                    <li><a href="hLink">header link one</a></li>
+                    <li><a href="hLink">header link two</a></li>
+                    <li><a href="hLink">header link three</a></li>
                 </ul>
             </div>
 
             <div class="content">
-
+                <div class="hContainer">
+                    <div class="hLargeText">This website is awesome</div>
+                    <div class="hSmallText">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</div>
+                    <div class="hButton">
+                        <button>Sign Up</button>
+                    </div>
+                </div>
+                <img src="./image.png" alt="Substitue Image">
             </div>
         </div>
         
