--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="sec1">
             <div class="header">
-                HEADER LOGO
+                <div class="hLogoText">HEADER LOGO</div>
                 <ul>
                     <li><a href="hLink">header link one</a></li>
                     <li><a href="hLink">header link two</a></li>
@@ -17,19 +17,37 @@
             </div>
 
             <div class="content">
-                <div class="hContainer">
-                    <div class="hLargeText">This website is awesome</div>
-                    <div class="hSmallText">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</div>
-                    <div class="hButton">
+                <div class="cContainer">
+                    <div class="cLargeText">This website is awesome</div>
+                    <div class="cSmallText">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</div>
+                    <div class="cButton">
                         <button>Sign Up</button>
                     </div>
                 </div>
-                <img src="./image.png" alt="Substitue Image">
+                <div class="cImage"></div>
             </div>
         </div>
         
         <div class="sec2">
-
+            <div class="topText">Some random information.</div>
+            <div class="info">
+                <div class="iContainer">
+                    <div class="iImage"></div>
+                    <div class="iText">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="iContainer">
+                    <div class="iImage"></div>
+                    <div class="iText">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="iContainer">
+                    <div class="iImage"></div>
+                    <div class="iText">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="iContainer">
+                    <div class="iImage"></div>
+                    <div class="iText">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
         </div>
 
         <div class="sec3">
