--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
         </div>
 
         <div class="sec4">
-
+            <div class="signUp">
+                <div class="sText">
+                    <div class="sLargeText">Call to action! It's time!</div>
+                    <div class="sSmallText">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="cButton">
+                    <button>Sign Up</button>
+                </div>
+            </div>
         </div>
 
         <div class="footer">
