--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Hero text</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -68,7 +69,7 @@
         </div>
 
         <div class="footer">
-
+            <div class="fText">Copyright (C) The Odin Project 2021</div>
         </div>
     </body>
 </html>
