--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <button>Sign Up</button>
                     </div>
                 </div>
-                <div class="cImage"></div>
+                <div class="cImage">This is a placeholder for an image</div>
             </div>
         </div>
         
