--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
         <div class="sec3">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-            <div class="speaker">-Thor, God of Thunder</div>
+            <div class="qContainer">
+                <div class="speaker">-Thor, God of Thunder</div>
+            </div>
         </div>
 
         <div class="sec4">
